# SandboxDirectX12

./: .clang-format  .gitignore  Application.cpp  Application.hpp  CMakeLists.txt  CMakeSettings.json  CommandQueue.hpp  Commons.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  DescriptorHeap.hpp  Device.cpp  Device.hpp  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.hpp  Game.cpp  Game.hpp  MainWindow.hpp  MeshData.hpp  Pixel.hlsl  Pixel1.hlsl  Pixel2.hlsl  PixelCube.hlsl  PixelFilter.hlsl  PixelSponza.hlsl  README.adoc  RootSignature1.hlsl  RootSignature2.hlsl  RootSignatureCube.inc  RootSignatureFilter.inc  RootSignatureSponza.hlsl  RootSignatureSponza.inc  UploadBuffer.cpp  UploadBuffer.hpp  Utils.hpp  Vertex.hlsl  Vertex1.hlsl  Vertex2.hlsl  VertexCube.hlsl  VertexFilter.hlsl  (+3 more)
MyDXLib/: Camera.hpp  CommandQueue.cpp  CommandQueue.hpp  DescriptorHeap.cpp  MainWindow.hpp  Mesh.cpp  Mesh.hpp  MeshData.cpp  MeshData.hpp  Scene.cpp  Scene.hpp  SceneData.cpp  SceneData.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  Utils.cpp  Utils.hpp
vs_2022/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  SandboxDirectX12.sln  SandboxDirectX12.vcxproj  SandboxDirectX12.vcxproj.filters  Shaders.vcxproj  Shaders.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
